Make `arcjet` and `permit` singletons Extract date formatting and stats data to other files to keep the route clode cleaner Removed settings page for clarity Fixed dark mode detection Added link to blog in homepage

--- a/examples/nextjs-14-permit/src/app/globals.css
+++ b/examples/nextjs-14-permit/src/app/globals.css
@@ -6,33 +6,8 @@
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
+  --background-start-rgb: 255, 255, 255;
   --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
 
   --callout-rgb: 238, 240, 241;
   --callout-border-rgb: 172, 175, 176;
@@ -45,26 +20,6 @@
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 40, 40, 40;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
 
     --callout-rgb: 40, 40, 40;
     --callout-border-rgb: 108, 108, 108;
@@ -96,6 +51,10 @@ body {
 
 a {
   color: inherit;
+  text-decoration: underline;
+}
+
+nav a {
   text-decoration: none;
 }
 
@@ -107,7 +66,7 @@ a {
 
 main {
   width: 100%;
-  max-width: 600px;
+  max-width: 800px;
   margin: 0 auto;
 }
 
@@ -132,16 +91,17 @@ nav {
     padding: 0.5rem 1rem;
     border-radius: 8px;
     background-color: rgb(var(--callout-rgb));
-    box-shadow: 0 0 10px rgba(var(--foreground-rgb), 0.1);
     border: 1px solid rgba(var(--callout-border-rgb), 0.5);
     cursor: pointer;
 
     &.active {
       background-color: rgb(var(--card-rgb));
+      border: 1px solid rgba(var(--card-border-rgb), 0.5);
     }
 
     &:hover {
       background-color: rgb(var(--card-rgb));
+      border: 1px solid rgba(var(--card-border-rgb), 0.5);
     }
   }
 
@@ -159,7 +119,6 @@ nav {
       display: block;
       border: none;
       border-radius: 0;
-      box-shadow: none;
     }
   }
 }
@@ -206,8 +165,8 @@ nav {
   padding: 0 1rem;
   border-radius: 8px;
   background-color: rgb(var(--callout-rgb));
-  box-shadow: 0 0 10px inset rgba(var(--foreground-rgb), 0.1);
   border: 1px solid rgba(var(--callout-border-rgb), 0.5);
+  overflow-x: scroll;
 }
 
 .behind-the-scenes {
